# ProjetoFinal_CG_Maze

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  apresentacao.md  cmake_install.cmake  generate_docs.sh  instrucoes_compilacao.txt  plano.txt
.cache/clangd/index/: Game.cpp.1F72F17114A3ECC7.idx  Game.h.F926EB8FCB60BA43.idx  Maze.cpp.F0A498DB3F89110F.idx  Maze.h.37904C868422B3C5.idx  Mesh.hpp.C6002B1B53736BD3.idx  Network.h.503DC38C2ED00E89.idx  Objloader.cpp.703E7D59DF6F493F.idx  Objloader.hpp.DF2F2E9D5255512A.idx  Shader.h.C338008EBB00C104.idx  TextRenderer.cpp.C2D5232CDED73B49.idx  TextRenderer.h.A9F51A2362351DF1.idx  Texture.h.973AE78D893185E2.idx  camera.h.39F078F2986924F7.idx  glad.c.6A69C6E9D188F080.idx  glad.h.F1B98FDC5E6D6C0E.idx  khrplatform.h.39137788163D33D9.idx  kruksal.cpp.3774468D51A391F8.idx  kruksal.h.CFFCA79241161A54.idx  main.cpp.A6F620D19754E63F.idx  main_client.cpp.1C26A5DA213D4E54.idx  main_host.cpp.3766E2404A844369.idx  maze_generator.cpp.BE80E1AC5ACAA976.idx  maze_generator.h.F57F9581377C1DA1.idx  network.cpp.0DF247AEB6EFE0BB.idx  stb_image.h.AB7DA75F29F2EFC8.idx
assets/models/: uploads_files_3348087_portal_environment.blend
assets/models/Tree_Spooky2/: Tree_Spooky2_High.mtl
assets/textures/Bricks101_4K-PNG/: Bricks101_4K-PNG.blend  Bricks101_4K-PNG.usdc
assets/textures/PavingStones138_4K-PNG/: PavingStones138_4K-PNG.mtlx
configuration/: root_directory.h  root_directory.h.in
docs/: Conclusion.aux  Conclusion.tex  Implementation.aux  Implementation.tex  Introduction.aux  Introduction.tex  Makefile  README.md  Technologies.aux  Technologies.tex  bibliography.bib  report.aux  report.bbl  report.blg  report.brf  report.lof  report.lot  report.out  report.tex  report.toc
docs/figures/: INSTRUCOES.txt
include/: Game.h  Maze.h  Mesh.hpp  Network.h  Objloader.hpp  Shader.h  TextRenderer.h  Texture.h
include/glad/: glad.h
include/kruksal/: kruksal.cpp  kruksal.h  maze_generator.cpp  maze_generator.h
include/learnopengl/: camera.h  shader.h  transform.h
shaders/: blinn_phong.frag  maze_fs.glsl  simple.vert
src/: Game.cpp  Maze.cpp  Objloader.cpp  TextRenderer.cpp  glad.c  main.cpp  main_client.cpp  main_host.cpp  network.cpp
